--- a/codefresh.yml
+++ b/codefresh.yml
@@ -11,7 +11,7 @@ steps:
 
   compile-pubma:
     description: compile Pumba binary, using builder image
-    image: pumba/builder:test
+    image: {{setup-builder}}
     working-directory: {{initial-clone}}
     commands:
     - ls -al
@@ -19,7 +19,7 @@ steps:
 
   go-pumba:
     description: compile Pumba binary, using builder image
-    image: pumba/builder:test
+    image: {{setup-builder}}
     working-directory: {{initial-clone}}
     commands:
       - ls ./.dist
