--- a/codefresh.yml
+++ b/codefresh.yml
@@ -6,8 +6,15 @@ steps:
     type: build
     description: create Pumba Go builder image (Go, tools, and libraries)
     dockerfile: Build.Dockerfile
-    image-name: pumba/builder
+    image-name: verchol/builder
     tag: test
+
+  push-step:
+    type: push
+    description: Free text description
+    candidate: verchol/builder
+    tag: test
+
 
   compile-pubma:
     description: compile Pumba binary, using builder image
