--- a/codefresh.yml
+++ b/codefresh.yml
@@ -2,18 +2,18 @@ version: '1.0'
 ## PUBMA YAML
 steps:
 
-  setup-builder:
-    type: build
-    description: create Pumba Go builder image (Go, tools, and libraries)
-    dockerfile: Build.Dockerfile
-    image-name: verchol/builder
-    tag: test
-
-  push-step:
-    type: push
-    description: Free text description
-    candidate: verchol/builder
-    tag: test
+  # setup-builder:
+  #   type: build
+  #   description: create Pumba Go builder image (Go, tools, and libraries)
+  #   dockerfile: Build.Dockerfile
+  #   image-name: verchol/builder
+  #   tag: test
+  #
+  # push-step:
+  #   type: push
+  #   description: Free text description
+  #   candidate: verchol/builder
+  #   tag: test
 
 
   compile-pubma:
