--- a/codefresh.yml
+++ b/codefresh.yml
@@ -12,7 +12,7 @@ steps:
   go-pumba:
     description: compile Pumba binary, using builder image
     image: ${{setup-builder}}
-    working_directory: ${{initial-clone}}
+    working-directory: ${{initial-clone}}
     environment:
        - DIST=distcf
     commands:
