fix codefresh.yaml syntax error

--- a/codefresh.yml
+++ b/codefresh.yml
@@ -33,7 +33,7 @@ steps:
   validate-pumba:
     description: compile Pumba binary, using builder image
     image: ${{setup-builder}}
-    working_directory: ${{initial-clone}}
+    working-directory: ${{initial-clone}}
     commands:
       - ls
 
