--- a/codefresh.yml
+++ b/codefresh.yml
@@ -13,8 +13,8 @@ steps:
     description: compile Pumba binary, using builder image
     image: ${{setup-builder}}
     working-directory: ${{initial-clone}}
-    environment:
-       - DIST=distcf
+    #environment:
+    #   - DIST=distcf
     commands:
       - script/go_build.sh
       - echo currnet dir - $PWD
