--- a/codefresh.yml
+++ b/codefresh.yml
@@ -19,7 +19,8 @@ steps:
       - script/go_build.sh
       - echo currnet dir - $PWD
       - echo $GOPATH
-      - cp -r /.dist /codefresh/volume/
+
+      - cp -r /.dist /codefresh/volume/.dist
   push-step:
     type: push
     description: Free text description
