--- a/codefresh.yml
+++ b/codefresh.yml
@@ -19,7 +19,7 @@ steps:
       - script/go_build.sh
       - echo currnet dir - $PWD
       - echo $GOPATH
-
+      - ls ./dist
       - cp -r /.dist /codefresh/volume/.dist
   push-step:
     type: push
@@ -37,6 +37,7 @@ steps:
     image: ${{setup-builder}}
     working-directory: ${{initial-clone}}
     commands:
+      - echo current directory - $PWD
       - ls -al
 
 
