--- a/codefresh.yml
+++ b/codefresh.yml
@@ -19,7 +19,7 @@ steps:
       - script/go_build.sh
       - echo currnet dir - $PWD
       - echo $GOPATH
-      - ls ./dist
+      - ls /.dist
       - cp -r /.dist /codefresh/volume/.dist
   push-step:
     type: push
@@ -39,6 +39,7 @@ steps:
     commands:
       - echo current directory - $PWD
       - ls -al
+      - ls ./.dist
 
 
 #  package-pumba:
